--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-commerce-task-with-json-object",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://halaelsaka2.github.io/e-commerce-with-json-server",
   "dependencies": {
     "antd": "^4.16.13",
     "axios": "^0.21.4",
@@ -20,8 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-    
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
